src/test/resources/validation/warning/unknownEnum/schema.graphqls
type Query {
    customer(id: ID!): Film
}

type Film @table {
    id: ID!
 }

enum Rating @enum(name: "RATING") {
    G,
    PG,
    R,
}

enum Rating2 @enum(name: "UNKOWN_ENUM") {
    G,
    PG,
    R,
}