src/test/resources/error/queryReturningInterfaceIllegalArguments/schema.graphqls
type Query {
  nodes(id: ID!, navn: String): Node #field returning interface should have exactly one argument
}

type Kull @node {
  id: ID!
  navn: String! @column(name: "STUDIEKULLNAVN")
}
